Bug 231882: WebKit::GPUConnectionToWebProcess::setTCCIdentity() leaks a tcc_identity_t <https://webkit.org/b/231882> <rdar://problem/84350854>

Reviewed by Chris Dumez.

Source/WebCore/PAL:

* pal/spi/cocoa/TCCSPI.h:
- Properly declare tcc_identity_t as an OSObject.

Source/WebKit:

* GPUProcess/cocoa/GPUConnectionToWebProcessCocoa.mm:
(WebKit::GPUConnectionToWebProcess::setTCCIdentity):
- Use WTF::adoptOSObject() to fix the leak.
- Expand the scope of !PLATFORM(MACCATALYST) since none of this
  code needs to run on the MacCatalyst platform.


Canonical link: https://commits.webkit.org/243158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284373 268f45cc-cd09-0410-ab3c-d52691b4dbfc