Source/WebCore/PAL/pal/spi/cocoa/TCCSPI.h
@@ -31,6 +31,8 @@
 
 #else
 
+#include <os/object.h>
+
 typedef enum {
     kTCCAccessPreflightGranted,
     kTCCAccessPreflightDenied,
@@ -39,7 +41,7 @@ typedef enum {
 #if HAVE(TCC_IOS_14_BIG_SUR_SPI)
 typedef uint64_t tcc_identity_type_t;
 constexpr tcc_identity_type_t TCC_IDENTITY_CODE_BUNDLE_ID = 0;
-typedef void* tcc_identity_t;
+OS_OBJECT_DECL_CLASS(tcc_identity);
 #endif // HAVE(TCC_IOS_14_BIG_SUR_SPI)
 
 #endif
