Source/WebKit/GPUProcess/cocoa/GPUConnectionToWebProcessCocoa.mm
@@ -35,6 +35,7 @@
 #import <WebCore/RegistrableDomain.h>
 #import <WebCore/SecurityOrigin.h>
 #import <pal/spi/cocoa/LaunchServicesSPI.h>
+#import <wtf/OSObjectPtr.h>
 
 #import "TCCSoftLink.h"
 #import <pal/ios/SystemStatusSoftLink.h>
@@ -68,6 +69,7 @@ bool GPUConnectionToWebProcess::setCaptureAttributionString()
 #if ENABLE(APP_PRIVACY_REPORT)
 void GPUConnectionToWebProcess::setTCCIdentity()
 {
+#if !PLATFORM(MACCATALYST)
     auto auditToken = gpuProcess().parentProcessConnection()->getAuditToken();
     if (!auditToken)
         return;
@@ -77,16 +79,14 @@ void GPUConnectionToWebProcess::setTCCIdentity()
     if (error)
         return;
 
-    tcc_identity_t identity = nil;
-    identity = tcc_identity_create(TCC_IDENTITY_CODE_BUNDLE_ID, [bundleProxy.bundleIdentifier UTF8String]);
+    auto identity = adoptOSObject(tcc_identity_create(TCC_IDENTITY_CODE_BUNDLE_ID, [bundleProxy.bundleIdentifier UTF8String]));
     if (!identity)
         return;
 
-#if !PLATFORM(MACCATALYST)
-    WebCore::RealtimeMediaSourceCenter::singleton().setIdentity(identity);
-#endif
+    WebCore::RealtimeMediaSourceCenter::singleton().setIdentity(identity.get());
+#endif // !PLATFORM(MACCATALYST)
 }
-#endif
+#endif // ENABLE(APP_PRIVACY_REPORT)
 } // namespace WebKit
 
 #endif // ENABLE(GPU_PROCESS)
